--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,11 @@
 flask==3.0.2
-flask-cors==4.0.0
+flask-cors==5.0.1
 pymongo==4.6.1
 python-dotenv==1.0.1
 requests==2.31.0
 authlib==1.3.0
 python-jose==3.3.0
 pyjwt==2.8.0
+icalendar==6.1.3
+pytz==2024.1
+
