--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.0",
+    "react-router-dom": "^7.5.0",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
